# ska-tango-charts

./: .gitignore  .gitlab-ci.yml  .release  COPYRIGHT  Makefile  README.md  pyproject.toml
charts/ska-tango-base/: Chart.yaml  values.yaml
charts/ska-tango-base/templates/: databaseds.yaml
charts/ska-tango-base/tests/: deviceservers_test.yaml
charts/ska-tango-umbrella/: Chart.yaml  values.yaml
charts/ska-tango-umbrella/data/: configuration.json
charts/ska-tango-umbrella/templates/: old-version-ds.yaml
charts/ska-tango-util/: Chart.yaml
charts/ska-tango-util/templates/: _configuration.yaml  _deviceserver-pvc.yaml  _deviceserver.yaml  _entrypoints-script.yml  _helpers.tpl  _multidevice-config.yaml  _multidevice-job.yaml  _multidevice-sacc-role.yaml  _multidevice-svc.yaml  _operator-ds.yaml  _secret-provider-class.yaml  _vault-static-secret.yaml
docs/src/: README.md  conf.py  helm_charts.rst  index.rst
tests/: pytest.ini
tests/unit/: conftest.py  test_tango-db.py
