[tool.poetry]
name = "ska-tango-charts"
version = "0.4.12"
description = "Helm charts for TANGO k8s deployments"
authors = ["Matteo Di Carlo <matteo.dicarlo@inaf.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.docs.dependencies]
myst-parser = "^3.0.0"
Sphinx = "^7.3.0"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
