[tool.poetry]
name = "ska-tango-charts"
version = "0.4.12"
description = "Helm charts for TANGO k8s deployments"
authors = ["Matteo Di Carlo <matteo.dicarlo@inaf.it>"]
readme = "README.md"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "<7.2.0"
pyyaml = "^6.0.2"
pytest-cov = "^5.0.0"
pytest-json-report = "^1.5.0"
pycodestyle = ">=2.6.0a1,<2.7.0"
pytest-bdd = "5.0.0"
pytest-ordering = "^0.6"
pytest-timeout = "^2.3.1"
pytest-forked = "^1.6.0"
elasticsearch = "^8.15.1"
kubernetes = "^30.1.0"
assertpy = "^1.1"
mock = "^5.1.0"
elasticsearch-dsl = "^8.15.3"
aiohttp = "^3.10.5"
aiojobs = "^1.3.0"
aiohttp-cors = "^0.7.0"
tango-simlib = "0.7.0"
mysql-connector-python = "8.0.29"
itango = "^0.1.9"

[tool.poetry.group.docs.dependencies]
myst-parser = "^3.0.0"
Sphinx = "^7.3.0"
sphinx-rtd-theme = "^2.0.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
